--- a/css-advanced/ejercicio1.css
+++ b/css-advanced/ejercicio1.css
@@ -10,5 +10,5 @@ h1{
     font-family: 'Courier New', Courier, monospace;
 }
 h2{
-    
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
